Merge branch 'master' into VectorAPI_dev (#550)